ci: downgrade to Java 11 because some tests are not compatible with Java 17
Errors from openapi-generator project